[project]
name = "common"
version = "0.1.0"
description = "Shared utilities and configuration"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11",
    "pydantic-settings>=2.10",
    "python-dotenv>=1.1",
    "structlog>=25.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "ruff>=0.12",
    "mypy>=1.16"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common"]
